--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "lint": "eslint src/**/*.js"
   },
   "dependencies": {
     "react": "15.0.2",
     "react-native": "0.26.3",
+    "react-native-swipe-cards": "0.0.7",
     "react-redux": "4.4.5",
     "redux": "3.5.2"
   },
