--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "lint": "eslint src/**/*.js"
   },
   "dependencies": {
