--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "react": "15.0.2",
-    "react-native": "0.26.3",
-    "react-native-swipe-cards": "0.0.7",
+    "react-native": "^0.27.1",
+    "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git",
     "react-redux": "4.4.5",
     "redux": "3.5.2"
   },
