--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
-    "react": "15.0.2",
+    "react": "^15.1.0",
     "react-native": "^0.27.1",
     "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git",
     "react-redux": "4.4.5",
