--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "rndebugger-open",
+    "revert-debugger": "rndebugger-open --revert",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "lint": "eslint src/**/*.js",
@@ -30,6 +32,7 @@
     "fs": "0.0.2",
     "mocha": "^2.5.3",
     "path": "^0.12.7",
+    "react-native-debugger-open": "^0.2.1",
     "react-native-mock": "^0.2.3"
   }
 }
