--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "revert-debugger": "rndebugger-open --revert",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "debug:ios:5": "npm run debug:ios -- --simulator=\"iPhone 5\"",
     "debug:android": "adb reverse tcp:8081 tcp:8081 && node node_modules/react-native/local-cli/cli.js run-android",
     "bundle:ios": "node node_modules/react-native/local-cli/cli.js bundle --dev false --entry-file ./index.ios.js --platform ios --bundle-output ios/main.jsbundle",
     "bundle:android": "node node_modules/react-native/local-cli/cli.js bundle --dev false --entry-file ./index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
