--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "parse": "^1.8.5",
     "react": "^15.1.0",
     "react-native": "^0.27.2",
     "react-native-code-push": "^1.12.2-beta",
