Run scripts for ParseServer, a README, and volumes.

--- a/ParseServer/docker-compose.yml
+++ b/ParseServer/docker-compose.yml
@@ -87,17 +87,17 @@ mongo:
   image: mongo
   ports:
     - "27017:27017"
-  volumes_from:
-    - mongo-data
+  volumes:
+    - $PWD/volumes/mongodata:/backups/
 #  command: "--smallfiles --logpath=/dev/null --setParameter failIndexKeyTooLong=false --rest --auth"
   command: "--smallfiles --logpath=/dev/null --setParameter failIndexKeyTooLong=false"
 # ref. http://www.diogogmt.com/running-mongodb-with-docker-and-compose/
 
-mongo-data:
-  image: mongo
-  volumes:
-    - /data/db
-  command: "--break-mongo"
+# mongo-data:
+#   image: mongo
+#   volumes:
+#     - /volumes/mongodata:/backups/
+#   command: "--break-mongo"
 
 parse-dashboard:
   #image: yongjhih/parse-dashboard:1.0.10
