--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^15.1.0",
     "react-native": "^0.27.2",
     "react-native-code-push": "^1.12.2-beta",
+    "react-native-simple-store": "^1.0.1",
     "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git#branch/redux",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
@@ -40,6 +41,7 @@
     "mocha": "^2.5.3",
     "path": "^0.12.7",
     "react-native-debugger-open": "^0.2.1",
-    "react-native-mock": "^0.2.3"
+    "react-native-mock": "^0.2.3",
+    "sinon": "^1.17.4"
   }
 }
