--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git#branch/redux",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "redux-thunk-sync-creators": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
