--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^15.1.0",
     "react-native": "^0.27.2",
     "react-native-code-push": "^1.12.2-beta",
+    "react-native-device-info": "^0.9.3",
     "react-native-simple-store": "^1.0.1",
     "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git#branch/redux",
     "react-redux": "4.4.5",
