--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-redux": "4.4.5",
     "redux": "3.5.2",
     "redux-thunk": "^2.1.0",
-    "redux-thunk-sync-creators": "^1.0.0"
+    "redux-thunk-sync-creators": "^1.0.0",
+    "tcomb-form-native": "^0.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
