--- a/ios/Impart.xcodeproj/xcshareddata/xcschemes/Impart.xcscheme
+++ b/ios/Impart.xcodeproj/xcshareddata/xcschemes/Impart.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "CharityTinder.app"
-               BlueprintName = "CharityTinder"
-               ReferencedContainer = "container:CharityTinder.xcodeproj">
+               BuildableName = "Impart.app"
+               BlueprintName = "Impart"
+               ReferencedContainer = "container:Impart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CharityTinderTests.xctest"
-               BlueprintName = "CharityTinderTests"
-               ReferencedContainer = "container:CharityTinder.xcodeproj">
+               BuildableName = "ImpartTests.xctest"
+               BlueprintName = "ImpartTests"
+               ReferencedContainer = "container:Impart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CharityTinderTests.xctest"
-               BlueprintName = "CharityTinderTests"
-               ReferencedContainer = "container:CharityTinder.xcodeproj">
+               BuildableName = "ImpartTests.xctest"
+               BlueprintName = "ImpartTests"
+               ReferencedContainer = "container:Impart.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CharityTinder.app"
-            BlueprintName = "CharityTinder"
-            ReferencedContainer = "container:CharityTinder.xcodeproj">
+            BuildableName = "Impart.app"
+            BlueprintName = "Impart"
+            ReferencedContainer = "container:Impart.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -80,9 +80,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CharityTinder.app"
-            BlueprintName = "CharityTinder"
-            ReferencedContainer = "container:CharityTinder.xcodeproj">
+            BuildableName = "Impart.app"
+            BlueprintName = "Impart"
+            ReferencedContainer = "container:Impart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -99,9 +99,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CharityTinder.app"
-            BlueprintName = "CharityTinder"
-            ReferencedContainer = "container:CharityTinder.xcodeproj">
+            BuildableName = "Impart.app"
+            BlueprintName = "Impart"
+            ReferencedContainer = "container:Impart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
