--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-device-info": "^0.9.3",
     "react-native-simple-store": "^1.0.1",
     "react-native-spinkit": "^0.1.2",
-    "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git#branch/master",
+    "react-native-swipe-cards": "git://github.com/breezykermo/react-native-tinder-swipe-cards.git",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
     "redux-thunk": "^2.1.0",
