--- a/package.json
+++ b/package.json
@@ -22,32 +22,32 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "parse": "^1.8.5",
-    "react": "^15.1.0",
-    "react-native": "^0.29.1",
-    "react-native-code-push": "^1.12.2-beta",
+    "react": "^15.3.2",
+    "react-native": "^0.36.0",
+    "react-native-code-push": "^1.15.0-beta",
     "react-native-device-info": "^0.9.3",
     "react-native-simple-store": "^1.0.1",
     "react-native-spinkit": "^0.1.2",
     "react-redux": "4.4.5",
-    "redux": "3.5.2",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "redux-thunk-sync-creators": "^1.0.0",
-    "tcomb-form-native": "^0.5.1"
+    "tcomb-form-native": "^0.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
-    "babel-eslint": "6.0.4",
+    "babel-eslint": "^7.1.0",
     "chai": "^3.5.0",
-    "eslint": "2.11.1",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.8.1",
-    "eslint-plugin-jsx-a11y": "1.2.3",
-    "eslint-plugin-react": "5.1.1",
-    "eslint-plugin-react-native": "1.1.0-beta",
+    "eslint": "^3.9.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-react-native": "^2.0.0",
     "fs": "0.0.2",
-    "mocha": "^2.5.3",
+    "mocha": "^3.1.2",
     "path": "^0.12.7",
-    "react-native-debugger-open": "^0.2.1",
+    "react-native-debugger-open": "^0.3.1",
     "react-native-mock": "^0.2.3",
     "sinon": "^1.17.4"
   }
