App 'working' upgraded
stilll very many layout issues

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "rndebugger-open",
     "revert-debugger": "rndebugger-open --revert",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "debug:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "debug:ios": "react-native run-ios",
     "debug:ios:6+": "npm run debug:ios -- --simulator=\"iPhone 6 Plus\"",
     "debug:ios:6s": "npm run debug:ios -- --simulator=\"iPhone 6s\"",
     "debug:ios:6": "npm run debug:ios -- --simulator=\"iPhone 6\"",
@@ -23,12 +23,12 @@
     "immutable": "^3.8.1",
     "parse": "^1.8.5",
     "react": "^15.3.2",
-    "react-native": "^0.36.0",
+    "react-native": "^0.42.x",
     "react-native-code-push": "^1.15.0-beta",
     "react-native-device-info": "^0.9.3",
     "react-native-simple-store": "^1.0.1",
     "react-native-spinkit": "^0.1.2",
-    "react-redux": "4.4.5",
+    "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "redux-thunk-sync-creators": "^1.0.0",
